# TestExercise

./: .gitignore  README.md  data.json  pyproject.toml  second_test.py  syst  test_for_IT.py
tests/: task1.py  task2.py  task3.py
