[tool.poetry]
name = "playwright_tests"
version = "0.1.0"
description = ""
authors = ["Mikhail <kokhovetc3oow@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
requests = "^2.31.0"
playwright = "1.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
